Ingredients crud, api and controller working